scripts/challenge5/deployment_poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: tripapi
  labels:
    app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
        - name: poi
          image: hacker3.azurecr.io/tripinsights/poi:1.0
          volumeMounts:
            - name: kvvolume
              mountPath: /secrets
              readOnly: true
          ports:
            - containerPort: 80
      volumes:
        - name: kvvolume
          flexVolume:
            driver: "azure/kv"
            secretRef:
              name: kvcreds                                                          
            options:
              keyvaultname: "hackteam1kv"                                            # [REQUIRED] the name of the KeyVault
              keyvaultobjectnames: "SQL-PASSWORD"                                    # [REQUIRED] list of KeyVault object names (semi-colon separated)
              keyvaultobjectaliases: "SQL_PASSWORD"                                  # [OPTIONAL] list of KeyVault object aliases
              keyvaultobjecttypes: secret                                            # [REQUIRED] list of KeyVault object types: secret, key,cert (semi-colon separated)
              resourcegroup: "teamResources"                                         # [REQUIRED for version < v0.0.14] the resource group ofthe KeyVault
              subscriptionid: "37d34961-9643-4b36-bb4d-d6490a5e747b"                 # [REQUIRED for version < v0.0.14] the subscription ID of the KeyVault
              tenantid: "cbddfaac-0fb1-417c-aac3-8d2fa625eb0b"                       # [REQUIRED] the tenant ID of the KeyVault

---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: tripapi
spec:
  type: ClusterIP
  ports:
    - name:
      port: 80
  selector:
    app: poi
